frontend: fix pie charts truncation and width

--- a/frontend/src/components/StatisticsView/StatisticsView.scss
+++ b/frontend/src/components/StatisticsView/StatisticsView.scss
@@ -24,8 +24,8 @@
     padding-bottom: 50px;
 
     .ChartCardContainer {
-      flex: 1 1 300px;
-      max-width: 500px;
+      flex: 1 1 600px;
+      max-width: 600px;
 
       .ChartCardTitle {
         padding-bottom: 10px;
